--- a/views/docentes.ejs
+++ b/views/docentes.ejs
@@ -1,8 +1,12 @@
-<%- include layouts/header.ejs %>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <%- include layouts/head.ejs %>
+  </head>
+  <body>
+    <%- include layouts/header.ejs %>
     <div class="container">
-      <h1><%= title %></h1>
-
+      <h1 class="text-center"><%= title %></h1>
       <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -20,5 +24,10 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
+    <%- include layouts/footer.ejs %>
+  </body>
+</html>
 
-<%- include layouts/footer.ejs %>
+
+
+
