--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,3 +1,1 @@
-<footer class="text-center"> Oraculo 2023 </footer>
-  </body>
-</html>
+<footer class="text-end" style="margin-right: 20px;"> Oraculo 2023 </footer>
