--- a/views/nosotros.ejs
+++ b/views/nosotros.ejs
@@ -1,63 +1,44 @@
-<%- include layouts/header.ejs %>
-
-<div class="container">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-
-<!-- Create a simple CodeMirror instance -->
-<link rel="stylesheet" href="lib/codemirror.css">
-<script src="lib/codemirror.js"></script>
-<script>
-  var editor = CodeMirror.fromTextArea(myTextarea, {
-    lineNumbers: true
-  });
-</script>
-   <!--
-    <link rel="stylesheet" type="text/css" href="lib/codemirror/lib/codemirror.css">
-    <link rel="stylesheet" type="text/css" href="lib/codemirror/theme/ambiance.css">
-    <script src="lib/jQuery/jQuery.js"></script>
-    <script src="lib/codemirror/lib/codemirror.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="editor-action.js"></script>
-    <script src="lib/codemirror/mode/htmlmixed/htmlmixed.js"></script>
-    <script src="lib/codemirror/mode/xml/xml.js"></script>
-    <script src="lib/codemirror/mode/javascript/javascript.js"></script>
-    <script src="lib/codemirror/mode/css/css.js"></script>
-    <script src="lib/codemirror/mode/clike/clike.js"></script>
-    <script src='lib/codemirror/mode/php/php.js'></script>
-    <script src='lib/codemirror/addon/selection/active-line.js'></script>
-    <script src='lib/codemirror/addon/edit/matchbrackets.js'></script>
-</head>-->
+  <%- include layouts/head.ejs %>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/mode/javascript/javascript.min.js"></script>
+</head>
 <body>
-<div class="row">
-    <textarea class=".codemirror-js" id="ed_code"></textarea>
-    <div class="app-row">
-        <button class="btn-action" id="run">Run</button>
-        <button class="btn-action" id="clear">Clear</button>
-        <button class="btn-action" id="refresh">Refresh</button>
+  <%- include layouts/header.ejs %>
+  <div class="container">
+    <div class="row">
+      <div class="app-row" style="margin-bottom: 10px;">
+        <textarea class=".codemirror-js style="width: 100%;" id="editor"></textarea>
+      </div>
+      <div class="app-row" style="margin-bottom: 10px;">
+        <button  type="button" class="btn btn-success btn-action" id="run">Run</button>
+        <button  type="button" class="btn btn-success btn-action" id="clear">Clear</button>
+        <button  type="button" class="btn btn-success btn-action" id="refresh">Refresh</button>
+      </div>
     </div>
-</div>
-<div class="app-row">   
-<div id="result"></div>
-</div>  
-    
-</div>
-
-<script type="text/javascript">
-        
-        $(document).ready(function(){
-	var code = $(".codemirror-js")[0];
-	var editor = CodeMirror.fromTextArea(code, {
-	lineNumbers : true,
-        tabSize:3,
-        styleActiveLine: true,
-        theme:"udb-dark",
-        matchBrackets: true,
+    <div class="app-row">   
+      <div id="result"></div>
+    </div>  
+  </div>
+  <%- include layouts/footer.ejs %>
+  <script>
+      let editor = CodeMirror.fromTextArea($("#editor")[0], {
+        lineNumbers: true,
         mode: "javascript"
-	});
-});
-</script>
+      });
 
+      //show for default
+      editor.doc.setValue( "function myFuction(){\n\t return 100;\n}");
 
-<%- include layouts/footer.ejs %>
+      //onClick clear
+      $("#clear").click(() => editor.doc.setValue(""));
+
+      //onClick clear
+      $("#refresh").click(() => editor.doc.undo());
+
+  </script>
+</body>
+</html>
