--- a/views/problemas.ejs
+++ b/views/problemas.ejs
@@ -4,19 +4,34 @@
   <%- include layouts/head.ejs %>
 </head>
 <body>
-  <%- include layouts/header.ejs %>
-  <h1 class="text-center"><%= title %></h1>
-  <div class="row" style="margin: 0% 15%;">
-    <div class="col">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Suma</h5>
-          <p class="card-text">Suma de dos numeros</p>
-          <a href="nosotros" class="btn btn-primary">Resolver</a>
-        </div>
+ <%- include layouts/header.ejs %>
+
+    
+      <h1><%= title %></h1>
+
+     
+
+      <div class="row">
+        <% for (var i=0; i<Problemas.length; i++)  { %>
+         
+
+          <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><%=Problemas[i].Titulo_problema %></h5>
+                <p class="card-text"><%=Problemas[i].Descripcion %></p>
+                <a href="nosotros" class="btn btn-primary">Resolver</a>
+              </div>
+            </div>
+          </div>
+  
+          <% } %>
+
+          
+      
       </div>
-    </div>
-  </div>
-  <%- include layouts/footer.ejs %>
+
+        
+<%- include layouts/footer.ejs %>
 </body>
 </html>
