--- a/views/cargaproblemas.ejs
+++ b/views/cargaproblemas.ejs
@@ -1,7 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <%- include layouts/head.ejs %>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/mode/javascript/javascript.min.js"></script>
+</head>
 <%- include layouts/header.ejs %>
 
 <form class="row g-3">
-    <div class="col-md-4">
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">Cargar</button>
+  </div>
+    <div class="col-md-2">
       <label for="validationDefault01" class="form-label">Titulo</label>
       <input type="text" class="form-control" id="validationDefault01" value="" required>
     </div>
@@ -11,20 +22,51 @@
     </div>
     
     </div>
-    <div class="col-md-6">
-      <label for="validationDefault03" class="form-label">Oraculo</label>
-      <input type="text" class="form-control" id="validationDefault03" required>
-    </div>
-    
     <div class="col-md-3">
       <label for="validationDefault05" class="form-label">Test</label>
       <input type="text" class="form-control" id="validationDefault05" required>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="app-row" style="margin-bottom: 10px;">
+          <label for="validationDefault03" class="form-label">Oraculo</label>
+          <textarea class=".codemirror-js style="width: 50%;" id="editororaculo"></textarea>
+        </div>
+        <script>
+          let editororaculo = CodeMirror.fromTextArea($("#editororaculo")[0], {
+            lineNumbers: true,
+            mode: "javascript"
+          });
+          //show for default
+          editororaculo.doc.setValue( "function myFunction(){\n\t return 100;\n}");
+          //onClick clear
+          $("#clear").click(() => editororaculo.doc.setValue(""));
+          //onClick clear
+          $("#refresh").click(() => editororaculo.doc.undo());
+      </script>
+    <div class="container">
+        <div class="row">
+          <div class="app-row" style="margin-bottom: 10px;">
+            <label for="validationDefault03" class="form-label">Código</label>
+            <textarea class=".codemirror-js style="width: 50%;" id="editorcodigo"></textarea>
+            </div>
+    <script>
+      let editorcodigo = CodeMirror.fromTextArea($("#editorcodigo")[0], {
+        lineNumbers: true,
+        mode: "javascript"
+      });
+      //show for default
+      editorcodigo.doc.setValue( "function myFunction(){\n\t return 100;\n}");
+      //onClick clear
+      $("#clear").click(() => editorcodigo.doc.setValue(""));
+      //onClick clear
+      $("#refresh").click(() => editorcodigo.doc.undo());
+  </script>
+    
+    
     
     </div>
-    <div class="col-12">
-      <button class="btn btn-primary" type="submit">Cargar</button>
-    </div>
+   
   </form>
 
 
