--- a/cargaproblemas.ejs
+++ b/cargaproblemas.ejs
@@ -11,8 +11,7 @@
 <form class="row g-3">
   <div class="col-12">
     
-        <div class="card-body">
-            <form action="/problemas/add" method="post">
+       // <div class="card-body">
                 
     
     
@@ -74,7 +73,26 @@
   </div>
     
     </div>
-   
+    <form method="POST" action="/crear">
+      <label for="titulo">Titulo:</label>
+      <input type="text" name="titulo" id="titulo">
+    
+      <label for="descripcion">Descripcion:</label>
+      <input type="text" name="descripcion" id="descripcion">
+    
+      <label for="oraculo">Oraculo:</label>
+      <input type="text" name="oraculo" id="oraculo">
+
+      <label for="test">Test:</label>
+      <input type="text" name="test" id="test">
+
+      <label for="test">Codigo:</label>
+      <input type="text" name="codigo" id="codigo">
+
+
+    
+      <button type="submit">Crear</button>
+    </form>
   </form>
 
 
