--- a/cargaproblemas.ejs
+++ b/cargaproblemas.ejs
@@ -6,96 +6,65 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/mode/javascript/javascript.min.js"></script>
 </head>
+<body>
 <%- include layouts/header.ejs %>
 
-<form class="row g-3">
-  <div class="col-12">
-    
-       // <div class="card-body">
-                
-    
-    
+<//div class="container">
+<//br/>
+<//br/>
+<a href="crear" class="btn btn-primary" type="button">Crear un nuevo problema</a>
+<a href="tests" class="btn btn-primary">Testear</a>
+<//br/>
+<//br/>
+<div class="row">
+  <% for (var i=0; i<Problemas.length; i++)  { %>
+   
 
-  </div>
-    <div class="col-md-2">
-      <label for="validationDefault01" class="form-label">Titulo</label>
-      <input type="text" class="form-control" id="validationDefault01" value="" required>
-    </div>
-    <div class="col-md-4">
-      <label for="validationDefault02" class="form-label">Descripcion</label>
-      <input type="text" class="form-control" id="validationDefault02" value="" required>
-    </div>
-    
-    </div>
-    <div class="col-md-3">
-      <label for="validationDefault05" class="form-label">Test</label>
-      <input type="text" class="form-control" id="validationDefault05" required>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="app-row" style="margin-bottom: 10px;">
-          <label for="validationDefault03" class="form-label">Oraculo</label>
-          <textarea class=".codemirror-js style="width: 50%;" id="editororaculo"></textarea>
-        </div>
-        <script>
-          let editororaculo = CodeMirror.fromTextArea($("#editororaculo")[0], {
-            lineNumbers: true,
-            mode: "javascript"
-          });
-          //show for default
-          editororaculo.doc.setValue( "function myFunction(){\n\t return 100;\n}");
-          //onClick clear
-          $("#clear").click(() => editororaculo.doc.setValue(""));
-          //onClick clear
-          $("#refresh").click(() => editororaculo.doc.undo());
-      </script>
-    <div class="container">
-        <div class="row">
-          <div class="app-row" style="margin-bottom: 10px;">
-            <label for="validationDefault03" class="form-label">Código</label>
-            <textarea class=".codemirror-js style="width: 50%; id="editorcodigo"></textarea>
+    <div class="col-sm-6 mb-3 mb-sm-0">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><%=Problemas[i].Titulo_problema %></h5>
+          <p class="card-text"><%=Problemas[i].Descripcion %></p>
+
+          <td> 
+             <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+              <form class="form-inline" method="post" action="/cargaproblemas/editar/"<%=Problemas[i].Id_problema %>"
+              <button type="button" class="btn btn-warning">Editar</button>
+              </form>
+              </div>
+           
+          
+             <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+              <form class="form-inline" method="post" action="/cargaproblemas/eliminar/"<%=Problemas[i].Id_problema %>"
+              <button type="button" class="btn btn-danger">Borrar</button>
+              </form>
             </div>
-    <script>
-      let editorcodigo = CodeMirror.fromTextArea($("#editorcodigo")[0], {
-        lineNumbers: true,
-        mode: "javascript"
-      });
-      //show for default
-      editorcodigo.doc.setValue( "function myFunction(){\n\t return 100;\n}");
-      //onClick clear
-      $("#clear").click(() => editorcodigo.doc.setValue(""));
-      //onClick clear
-      $("#refresh").click(() => editorcodigo.doc.undo());
-  </script>
-    
-    <div class="form-group">
-      <input type="submit" class="btn btn-info" value="Guardar"/>
-  </div>
-    
+
+          </td>  
+          
+       
+
+        </div>
+        
+      </div>
+
     </div>
-    <form method="POST" action="/crear">
-      <label for="titulo">Titulo:</label>
-      <input type="text" name="titulo" id="titulo">
     
-      <label for="descripcion">Descripcion:</label>
-      <input type="text" name="descripcion" id="descripcion">
-    
-      <label for="oraculo">Oraculo:</label>
-      <input type="text" name="oraculo" id="oraculo">
+    <% } %>
 
-      <label for="test">Test:</label>
-      <input type="text" name="test" id="test">
+</div>
 
-      <label for="test">Codigo:</label>
-      <input type="text" name="codigo" id="codigo">
+<script>
+          
+  //var titulo = Problemas[i].Titulo_problema;
+  //alert(titulo);
+  //var codigo = Problemas[i].Codigo
 
-
-    
-      <button type="submit">Crear</button>
-    </form>
-  </form>
-
-
-
-
+</script>
+  
 <%- include layouts/footer.ejs %>
+</body>
+</html>
+ 
+
+
